# SubmergeSerenade

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
src/: jsonExtended.hpp  main.cpp
src/ChartManager/: ChartManager.cpp  ChartManager.hpp  CsvStructure.cpp  CsvStructure.hpp  XMLHelper.cpp  XMLHelper.hpp
src/ChartManager/Enums/: SDVXDiff.hpp  SDVXDifficulty.hpp
src/ChartManager/Managers/: SDVXChartManager.cpp  SDVXChartManager.hpp
src/ChartManager/Parsers/: SDVX1Parser.cpp  SDVX1Parser.hpp
src/ChartManager/Structures/: SDVX1StaticSong.hpp  SDVXChart.hpp  SDVXDifficulty.hpp  SDVXEntry.hpp  SDVXParsedDifficulty.hpp  SDVXParsedSong.hpp  SDVXSong.hpp
src/UI/: GameUISection.cpp  GameUISection.hpp  MainWindow.cpp  MainWindow.hpp  UIHelpers.cpp  UIHelpers.hpp
src/UI/SDVX/: SdvxSection.cpp  SdvxSection.hpp
src/static/: SDVX1Songs.json
